--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@ header,
 }
 
 #intro {
-    background: url("../img/gladosBackground.jpg") no-repeat center center fixed;
+    background: url("../img/spaceXbackground.jpg") no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
